# MaxMind-DB-Reader-python

./: .gitignore  .gitmodules  .indent.pro  .pylintrc  .readthedocs.yaml  .travis-yapf.sh  .travis.yml  HISTORY.rst  MANIFEST.in  README.rst  TODO  configure.in  lychee.toml  maxminddb.c  mise.toml  py_libmaxmind.c  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: address-sanitizer.yml  clang-analyzer.yml  codeql-analysis.yml  create-wheels.yml  lint.yml  release.yml  test-libmaxminddb.yml  test.yml
dev-bin/: clang-format-all.sh  release.sh
docs/: Makefile  conf.py  index.rst
examples/: benchmark.py
extension/: maxminddb.c  maxminddb_config.h
maxminddb/: __init__.py  compat.py  decoder.py  errors.py  extension.pyi  file.py  reader.py  types.py
maxminddb/extension/: maxminddb.c
tests/: decoder_test.py  maxminddb_test.py  reader_test.py  threading_test.py
