[flake8]
extend-ignore = E203
# black uses 88 : ¯\_(ツ)_/¯
max-line-length = 88

[metadata]
name = maxminddb
author = Gregory Oschwald
author_email = goschwald@maxmind.com
license = Apache License, Version 2.0
description = Reader for the MaxMind DB format
url = http://www.maxmind.com/
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python
    Topic :: Internet :: Proxy Servers
    Topic :: Internet
project_urls =
    Documentation = https://maxminddb.readthedocs.org/
    Source Code = https://github.com/maxmind/MaxMind-DB-Reader-python
    Issue Tracker = https://github.com/maxmind/MaxMind-DB-Reader-python/issues

[options]
package_dir =
    maxminddb = maxminddb
packages = maxminddb
install_requires =
include_package_data = True
python_requires = >=3.7

[wheel]
universal = 1

[options.package_data]
maxminddb = extension.pyi; py.typed

[tox:tox]
envlist = {py37,py38,py39,py310,py311,py312}-test,py312-{black,lint,flake8,mypy}

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312,black,lint,flake8,mypy

[testenv:{py37,py38,py39,py310,py311,py312}-test]
deps = pytest
commands = pytest tests
passenv = *

[testenv:py312-black]
deps = black
commands = black --check --diff .

[testenv:py312-lint]
deps = pylint
commands = pylint maxminddb

[testenv:py312-flake8]
deps = flake8
commands = flake8 maxminddb

[testenv:py312-mypy]
deps = mypy
commands = mypy maxminddb tests
