[flake8]
extend-ignore = E203
# black uses 88 : ¯\_(ツ)_/¯
max-line-length = 88

[options]
package_dir =
    maxminddb = maxminddb
packages = maxminddb
install_requires =
include_package_data = True
python_requires = >=3.9

[options.package_data]
maxminddb = extension.pyi; py.typed

[tox:tox]
envlist = {py39,py310,py311,py312,py313}-test,py313-{black,lint,flake8,mypy}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313,black,lint,flake8,mypy

[testenv:{py39,py310,py311,py312,py313}-test]
deps = pytest
commands = pytest tests
passenv = *

[testenv:py313-black]
deps = black
commands = black --check --diff .

[testenv:py313-lint]
deps = pylint
commands = pylint maxminddb

[testenv:py313-flake8]
deps = flake8
commands = flake8 maxminddb

[testenv:py313-mypy]
deps = mypy
commands = mypy maxminddb tests
